[package]
name = "web-server-from-the-book"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "The final project from \"The Rust Programming Language\""
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["thread-pool"]
categories = ["network-programming"]

[lib]
name = "web_server_from_the_book_lib"
path = "src/lib.rs"

[[bin]]
name = "web-server_from-the-book"
path = "src/main.rs"

[dependencies]

# See https://docs.rs/about/metadata. This is only relevant when publishing to docs.rs.
[package.metadata.docs.rs]
rustdoc-args = ["--no-deps"]
